<resources>
    <string name="app_name">glampe_mobile</string>
    <string name="camp_quantity">Quantity: %1d camps</string>
    <string name="back">Back</string>
    <string name="chat_name">User</string>
    <string name="more_options">More options</string>
    <string name="attach_file">Attach file</string>
    <string name="enter_message">Enter message…</string>
    <string name="price_per_night">%1s ~ %2s</string>
</resources>